Update index.html to trigger deployment

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- HEADER SECTION -->
         <header class="row profile-header py-4">
             <div class="col-md-4 text-center">
-                <!-- FIXED: Removed leading slash -->
+                <!-- FIXED: Removed leading slash. -->
                 <img src="img/drake.jpg" alt="Profile Picture" class="profile-img rounded-circle border border-4 border-info">
                 <h1 class="mt-3 profile-title">Aubrey Drake Graham</h1>
                 <p class="profile-tagline"><i class="fas fa-bolt"></i> OVO CEO | Certified Lover Boy | From the 6</p>
